fix homepage phone jumping on empty article list

--- a/app/assets/stylesheets/article/_article.sass
+++ b/app/assets/stylesheets/article/_article.sass
@@ -171,3 +171,7 @@
     &__social
       float: right
       margin-top: 0
+@media screen and (min-width: 1200px)
+  .article
+    &__home
+      min-height: 650px
